# millet

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
meet/: __init__.py  frontmatter.py  label.py  summarize.py  transcribe.py  voiceprint.py
millet/: __init__.py  audio.py  capture.py  cli.py  frontmatter.py  gui.py  label.py  languages.py  parakeet.py  paths.py  pdf.py  summarize.py  sync.py  transcribe.py  utils.py  voiceprint.py  webui.py
millet/cli/: __init__.py  __main__.py  _helpers.py  download.py  enroll.py  gui.py  ingest.py  label.py  run.py  sync.py  transcribe.py  translate.py  webui.py
millet/prompts/: summarize_extract_system.md  summarize_extract_user.md  summarize_format_user.md
scripts/: bench_asr.py  bench_asr_results.md
tests/: conftest.py  test_capture.py  test_cli.py  test_frontmatter.py  test_gui.py  test_ingest.py  test_label.py  test_parakeet.py  test_paths.py  test_pdf.py  test_shim_imports.py  test_ssl_cert_injection.py  test_summarize.py  test_summarize_tinfoil_retry.py  test_summarize_twopass.py  test_sync_team.py  test_transcribe.py  test_utils.py  test_voiceprint_gate.py
