[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "millet-pipeline"
version = "0.9.0"
description = "Meeting transcription pipeline (diarization, AI summaries, PDF output) under the vezir ecosystem.  Builds on millet-record for capture.  Named after the Ottoman millet system.  Successor to meetscribe-offline."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "pretyflaco"}]
keywords = [
    "meeting",
    "transcription",
    "whisper",
    "whisperx",
    "diarization",
    "speaker-diarization",
    "pyannote",
    "ollama",
    "local-ai",
    "audio",
    "recording",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    "millet-record>=0.4.0",
    "whisperx>=3.8",
    "click>=8.0",
    "reportlab>=4.0",
    "requests>=2.28",
    # certifi is already a transitive dependency via requests +
    # huggingface_hub; listed explicitly because millet/__init__.py
    # imports it directly for the F3 SSL_CERT_FILE injection (see
    # the M8 retrospective).
    "certifi",
]

# `millet` console script is provided by millet-record; the pipeline
# package extends it with the heavier subcommands via the
# `millet.subcommands` entry-point group below.  The legacy
# `meet.subcommands` group is also published for one deprecation cycle
# so a transitional `meet` CLI from millet-record < 0.4.0 still loads
# our subcommands.
[project.entry-points."millet.subcommands"]
transcribe = "millet.cli:transcribe"
run = "millet.cli:run"
download = "millet.cli:download"
translate = "millet.cli:translate"
label = "millet.cli:label"
enroll = "millet.cli:enroll"
sync = "millet.cli:sync"
gui = "millet.cli:gui"
ingest = "millet.cli:ingest"

[project.entry-points."meet.subcommands"]
transcribe = "millet.cli:transcribe"
run = "millet.cli:run"
download = "millet.cli:download"
translate = "millet.cli:translate"
label = "millet.cli:label"
enroll = "millet.cli:enroll"
sync = "millet.cli:sync"
gui = "millet.cli:gui"
ingest = "millet.cli:ingest"

[project.urls]
Homepage = "https://github.com/pretyflaco/millet"
Repository = "https://github.com/pretyflaco/millet"
Issues = "https://github.com/pretyflaco/millet/issues"

[tool.setuptools.package-data]
millet = ["prompts/*.md"]

[project.optional-dependencies]
rtl = ["arabic-reshaper>=3.0", "python-bidi>=0.4"]
mlx = ["mlx-whisper>=0.4.3"]
tee = ["tinfoil>=0.12"]
dev = ["ruff", "pytest"]
